--- a/back/inaturalist/local_settings.py.example
+++ b/back/inaturalist/local_settings.py.example
@@ -1,7 +1,7 @@
 import os
 
 # SECURITY WARNING: keep the secret key used in production secret!
-SECRET_KEY = 'your_secret_here#!z&f4cc)ym%@jg=fzf4im%eg$99i==uzrtdj$bg%dpb9pn&a1'
+SECRET_KEY = ''
 
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG = True
@@ -50,15 +50,14 @@ DATABASES = {
 '''
 
 # admins
-ADMINS = [('Admin', 'admin@sistematiza.cl')]
+ADMINS = [('Admin', 'admin@gmail.com')]
 
 RECAPTCHA_PUBLIC_KEY = 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
 RECAPTCHA_PRIVATE_KEY = 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
 
 # v3 drigox
-DRF_RECAPTCHA_SECRET_KEY = '6LfrKKgZAAAAAPciwSZQzsshU0maxs4JSt8RUKtC'
 
-DRF_RECAPTCHA_SECRET_KEY = '<your_reCAPTCHA_secret_key>'
+DRF_RECAPTCHA_SECRET_KEY = ''
 
 DRF_RECAPTCHA_VERIFY_ENDPOINT = 'https://www.google.com/recaptcha/api/siteverify'
 
