--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@diracleo/vue-enlargeable-image": "^0.0.7",
     "@mathieustan/vue-datepicker": "^0.2.11",
     "axios": "^0.21.0",
     "buefy": "^0.9.4",
