--- a/back/Dockerfile.back
+++ b/back/Dockerfile.back
@@ -13,13 +13,13 @@ wkhtmltopdf xvfb
 RUN apt-get clean
 
 WORKDIR /app
-COPY ./back/requirements.txt /app/tmp/
+COPY ./requirements.txt /app/tmp/
 RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python3.7 get-pip.py
 RUN python3.7 -m pip install uwsgi
 RUN python3.7 -m pip install -r /app/tmp/requirements.txt
 COPY ./setup/ /app/setup/
-COPY ./back/inaturalist/uwsgi.conf /etc/init.d/uwsgi.conf
-COPY ./back/inaturalist/uwsgi.ini /uwsgi.ini
+COPY ./inaturalist/uwsgi.conf /etc/init.d/uwsgi.conf
+COPY ./inaturalist/uwsgi.ini /uwsgi.ini
 COPY ./entrypoint-back.sh /usr/local/entrypoint-back.sh
 RUN chmod +x /etc/init.d/uwsgi.conf
 RUN chmod +x /usr/local/entrypoint-back.sh
