--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,9 @@ services:
       - ./static:/static
       - ./media:/app_media
     environment:
+      DEBUG: ${DEBUG}
+      ENVIRONMENT: ${ENVIRONMENT}
+      DJANGO_SECRET: ${DJANGO_SECRET}
       FRONT_URL: ${FRONT_URL}
       DRF_RECAPTCHA_SECRET_V3: ${DRF_RECAPTCHA_SECRET_V3}
       INAT_CLIENT_ID: ${INAT_CLIENT_ID}
