--- a/front/docker-compose.yml
+++ b/front/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "8001:81" # front = index.html
       - "8080:8080" # front dev = index.html
       - "80:80" # front = index.html
+      - "443:443" # front = index.html
     volumes:
       - ../bin:/usr/local/scripts
       - ./:/front
