--- a/back/cumplo/uwsgi.ini
+++ b/back/cumplo/uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 chdir = /app
-module = inaturalist.wsgi:application
+module = cumplo.wsgi:application
 uid = www-data
 listen = 128
 process = 20
@@ -13,4 +13,4 @@ stats = 127.0.0.1:9091
 master = True
 vacuum = True
 max-requests = 5000
-daemonize = /var/log/inaturalist_uwsgi.log
+daemonize = /var/log/cumplo_uwsgi.log
