--- a/env.example
+++ b/env.example
@@ -1,12 +1,9 @@
-DEBUG=True
-ENVIRONMENT=DEVELOPMENT
+WEB_HTTPS_PORT=
+WEB_HTTP_DEV_PORT=
+DEBUG=
+ENVIRONMENT=
 DJANGO_SECRET=
-WEB_HTTPS_PORT=4430
-WEB_HTTP_DEV_PORT=8000
-FRONT_URL=http://localhost:8080
-GCP_BQ_CREDS_JSON=
-INAT_CLIENT_ID=
-INAT_SECRET=
+FRONT_URL=
 DRF_RECAPTCHA_SECRET_V3=
 POSTGRES_PASSWORD=
 POSTGRES_USER=
