--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,5 +1,5 @@
-django<3
-psycopg2-binary==2.8.4
+django==3.2.9
+psycopg2-binary==2.8.5
 coverage==5.0.4
 django-recaptcha==2.0.6
 factory_boy==2.12.0
@@ -19,12 +19,9 @@ matplotlib==3.2.1
 seaborn==0.10.1
 requests==2.23.0
 geopandas==0.7.0
-django-rest-swagger
-django-grappelli==2.14.2
 sqlparse==0.4.1
 moz-sql-parser==4.5.20343
-pycrypto==2.6.1
+pycryptodome==3.11.0
 cryptography==3.3.1
 django-redis==4.12.1
 flake8==3.8.3
-google-cloud-bigquery==2.21.0
